Fix print not loading on small screen (#457)
* Fix print not loading on small screen

* Bump patch version

* Show active language always to the right on print

--- a/h5p-bildetema/src/components/Header/Header.module.scss
+++ b/h5p-bildetema/src/components/Header/Header.module.scss
@@ -16,6 +16,8 @@
   }
 
   @media print {
+    margin-bottom: 0;
+    padding: $spacing--32 0;
     position: relative;
   }
 
@@ -97,6 +99,10 @@
   flex-wrap: wrap;
 
   @include breakpoint-min($small) {
+    display: flex;
+  }
+
+  @media print {
     display: flex;
   }
 }
