--- a/h5p-bildetema/src/components/LanguageFavorites/LanguageFavorites.module.scss
+++ b/h5p-bildetema/src/components/LanguageFavorites/LanguageFavorites.module.scss
@@ -22,7 +22,7 @@
   }
 
   @media print {
-    position: relative;
+    display: none; // Show favorites in header component instead
   }
 }
 
